2010-04-25  David Bateman  <dbateman@free.fr>

	* oct-parse.yy (octave_function * load_fcn_from_file
	(const std::string&, const std::string&, const std::string&)
        (const std::string&, bool)): When loading a mex-file attempt
	to load the m-file first to get the help string.

2010-04-24  Ben Abbott <bpabbott@mac.com>

	* graphics.h.in: Have figure color property support a radio value,
	'none'.

2010-04-24  David Bateman  <dbateman@free.fr>

	* graphics.cc (void axes::properties::set_defaults
	(base_graphics_object&, const std::string&)): Make the default
	axes color "none".

2010-04-24  Shai Ayal  <shaiay@users.sourceforge.net>

	* Makefile.am: change GRAPHICS_CPPFLAGS to GRAPHICS_CFLAGS since
	the former does not exist and the latter serves the same purpose

2010-04-23  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Clarify compilation note about defaults.h

2010-04-23  Rik <octave@nomad.inbox5.com>

	* symtab.h: Clear global variables when 'clear -all' called

2010-04-23  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/fltk_backend.cc	(OpenGL_fltk::OpenGL_fltk):
	Explicitly initizlize all data members in the order they are declared.

2010-04-23  John W. Eaton  <jwe@octave.org>

	* txt-eng-ft.cc (ft_render::visit): Declare loop counter size_t,
	not int.

	* graphics.h.in (graphics_xform::untransform):  Likewise.
	* graphics.cc (text::properties::update_text_extent): Likewise.
	* DLD-FUNCTIONS/fltk_backend.cc	(plot_window::set_axes_currentpoint):
	Avoid GCC shadow variable warning.

	* DLD-FUNCTIONS (plot_window::plot_window): Explicitly
	initialize all data members in the order they are declared.

2010-04-23  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gcd.cc (Fgcd): Use two-argument dim_vector constructor.

	* ov-str-mat.cc (octave_char_matrix_str::do_index_op_internal):
	Explicitly create idx_vec with column orientation.

	* oct-obj.cc (octave_value_list::octave_value_list):
	Explicitly resize data to be row vector.
